# pyGrained

./: .gitignore  README.md  pyproject.toml
Tests/: hist.py  simple.py  traj.py
Tests/data/ubiquitin/: 36b689z4lb.pqr
pyGrained/: __init__.py  requirements.txt
pyGrained/models/: SBCG.py
src/pyGrained/: Makefile  __init__.py  models.py
src/pyGrained/models/: AlphaCarbon.py  SBCG.py
src/pyGrained/utils/: atomList.py  coarseGrained.py  output.py  trajectory.py
tests/: clean.sh  simple.py  tests.py
