[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pyGrained"
version = "0.0.1"
authors = [
  { name="Pablo Ibanez Freire", email="p.ibanez.fre@gmail.com" },
]
description = "Python library for the development of protein coarse grained models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PabloIbannez/pyGrained"
"Bug Tracker" = "https://github.com/PabloIbannez/pyGrained/issues"
